fix marquee on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -134,8 +134,21 @@ html {
   }
 }
 
+@keyframes marquee-mobile {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-300%);
+  }
+}
+
 .animate-marquee {
   animation: marquee 30s linear infinite;
+}
+
+.animate-marquee-mobile {
+  animation: marquee-mobile 20s linear infinite;
 }
 
 .gradient-bg {
